Bug 1557849: Check if a MenuPopupAccessible belongs to a context menu to determine its role assignment. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D48394